--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
+.navBar {
+    background-color: #333;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 20px;
+    font-family: Arial, sans-serif;
+    border-bottom: 3px solid #444;
+}
+
+.navBar .main,
+.navBar .stats {
+    padding: 5px 10px;
+}
+
+.navBar a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20pt;
+    padding: 8px 16px;
+    display: inline-block;
+    background-color: #333;
+    border-radius: 3px;
+    transition: background-color 0.3s ease;
+}
+
+.navBar a:hover {
+    background-color: #555;
+}
+
+.main-title {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stats-title {
+  text-align: center;
 }
