--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    gap: 20px;
+    gap: 10px;
+    align-items: center; /* verticle centering*/
     font-family: Arial, sans-serif;
     border-bottom: 3px solid #444;
 }
@@ -34,7 +35,15 @@
   text-align: center;
 }
 
+.logo {
+  height: 50px;
 
+}
 .stats-title {
   text-align: center;
+}
+
+.title {
+  font-size: 30px;
+  color:aliceblue;
 }
