--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: flex-start;
     gap: 10px;
-    align-items: center; /* verticle centering*/
+    align-items: center; /* vertical centering*/
     font-family: Arial, sans-serif;
     border-bottom: 3px solid #444;
 }
